# language-learning-app

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  NEXT_STEPS.md  OVERVIEW.md  README.md  app.py  fly.toml  generate_icons.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  fly-deploy.yml
api/: index.ts  tsconfig.json
client/: .env.example  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
client/src/app/: composition.ts  fonts.css  main.tsx
client/src/core/: romanize.ts  vad.test.ts
client/src/ports/: AudioCapturePort.ts  AudioPlaybackPort.ts  CoachPort.ts  PhraseRepoPort.ts  ProgressPort.ts  TranslationPort.ts  TutorPort.ts  emitter.ts  types.ts
client/src/store/: conversationStore.test.ts  conversationStore.ts  drillStore.test.ts  drillStore.ts  learnStore.test.ts  learnStore.ts  listenStore.test.ts  listenStore.ts  micError.test.ts  micError.ts  reviewStore.test.ts  reviewStore.ts  vocabEngine.ts
client/src/ui/: App.test.tsx  App.tsx  ConversationScreen.test.tsx  ConversationScreen.tsx  DebugPanel.tsx  LearnScreen.test.tsx  LearnScreen.tsx  ListenScreen.test.tsx  ListenScreen.tsx  LoginGate.tsx  (+7 more)
docs/: FEATURE_DESIGN.md  LANGUAGE_LEARNING_RESEARCH.md  api-notes.md  model-decisions.md  pedagogy.md
server/: .env.example  eslint.config.js  package.json  tsconfig.json
server/src/: app.ts  index.ts
static/: manifest.json  service-worker.js
static/css/: style.css
static/icons/: generate-icons.html
static/js/: app.js
templates/: index.html
(+87 files in other folders)
