[project]
name = "telugu-tutor"
version = "0.1.0"
description = "Learn Telugu through immersive AI conversations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.40.0",
    "cartesia>=2.0.0",
    "pyaudio>=0.2.14",
    "flask>=3.0.0",
]

[project.scripts]
telugu-tutor = "telugu_tutor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
