[project]
name = "telugu-tutor"
version = "0.1.0"
description = "Learn Telugu through immersive AI conversations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.40.0",
    "cartesia>=2.0.0",
    "pyaudio>=0.2.14",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
